[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws", "macros"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
futures-util = "0.3.32"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.8"
reqwest = { version = "0.13.2", default-features = false, features = ["form", "json", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"

# sqlx for the persistent token / pending-device / audit store. The
# `bundled` libsqlite3-sys feature compiles sqlite into the binary so
# we don't need a runtime apt dependency.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
